--- a/chk_data.ipynb
+++ b/chk_data.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "id": "267957e4-f5bb-46ae-a906-ae56de26db1d",
    "metadata": {},
    "outputs": [
@@ -198,82 +198,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>2986</td>\n",
-       "      <td>3684</td>\n",
-       "      <td>Manning-Hamilton</td>\n",
-       "      <td>Vision-oriented scalable definition</td>\n",
-       "      <td>97300.0</td>\n",
-       "      <td>153216.0</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>2043</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2020-12-29</td>\n",
-       "      <td>2021-05-30</td>\n",
-       "      <td>food</td>\n",
-       "      <td>food trucks</td>\n",
-       "      <td>cat1</td>\n",
-       "      <td>subcat1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>2031</td>\n",
-       "      <td>5784</td>\n",
-       "      <td>Butler LLC</td>\n",
-       "      <td>Future-proofed upward-trending migration</td>\n",
-       "      <td>6600.0</td>\n",
-       "      <td>4814.0</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>112</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2021-10-15</td>\n",
-       "      <td>2021-11-30</td>\n",
-       "      <td>theater</td>\n",
-       "      <td>plays</td>\n",
-       "      <td>cat4</td>\n",
-       "      <td>subcat4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>1627</td>\n",
-       "      <td>1498</td>\n",
-       "      <td>Ball LLC</td>\n",
-       "      <td>Right-sized full-range throughput</td>\n",
-       "      <td>7600.0</td>\n",
-       "      <td>4603.0</td>\n",
-       "      <td>canceled</td>\n",
-       "      <td>139</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>2021-11-06</td>\n",
-       "      <td>2021-12-10</td>\n",
-       "      <td>theater</td>\n",
-       "      <td>plays</td>\n",
-       "      <td>cat4</td>\n",
-       "      <td>subcat4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>2175</td>\n",
-       "      <td>6073</td>\n",
-       "      <td>Taylor, Santiago and Flores</td>\n",
-       "      <td>Polarized composite customer loyalty</td>\n",
-       "      <td>66600.0</td>\n",
-       "      <td>37823.0</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>374</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2020-10-08</td>\n",
-       "      <td>2021-04-11</td>\n",
-       "      <td>music</td>\n",
-       "      <td>indie rock</td>\n",
-       "      <td>cat2</td>\n",
-       "      <td>subcat8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>999</th>\n",
        "      <td>1788</td>\n",
        "      <td>4939</td>\n",
@@ -298,41 +222,25 @@
       ],
       "text/plain": [
        "     cf_id  contact_id                  company_name  \\\n",
-       "995   2986        3684              Manning-Hamilton   \n",
-       "996   2031        5784                    Butler LLC   \n",
-       "997   1627        1498                      Ball LLC   \n",
-       "998   2175        6073   Taylor, Santiago and Flores   \n",
        "999   1788        4939  Hernandez, Norton and Kelley   \n",
        "\n",
-       "                                  description      goal   pledged     outcome  \\\n",
-       "995       Vision-oriented scalable definition   97300.0  153216.0  successful   \n",
-       "996  Future-proofed upward-trending migration    6600.0    4814.0      failed   \n",
-       "997         Right-sized full-range throughput    7600.0    4603.0    canceled   \n",
-       "998      Polarized composite customer loyalty   66600.0   37823.0      failed   \n",
-       "999               Expanded eco-centric policy  111100.0   62819.0    canceled   \n",
+       "                     description      goal  pledged   outcome  backers_count  \\\n",
+       "999  Expanded eco-centric policy  111100.0  62819.0  canceled           1122   \n",
        "\n",
-       "     backers_count country currency launch_date    end_date category  \\\n",
-       "995           2043      US      USD  2020-12-29  2021-05-30     food   \n",
-       "996            112      US      USD  2021-10-15  2021-11-30  theater   \n",
-       "997            139      IT      EUR  2021-11-06  2021-12-10  theater   \n",
-       "998            374      US      USD  2020-10-08  2021-04-11    music   \n",
-       "999           1122      US      USD  2020-12-30  2021-08-18     food   \n",
+       "    country currency launch_date    end_date category sub-category  \\\n",
+       "999      US      USD  2020-12-30  2021-08-18     food  food trucks   \n",
        "\n",
-       "    sub-category category_id subcategory_id  \n",
-       "995  food trucks        cat1        subcat1  \n",
-       "996        plays        cat4        subcat4  \n",
-       "997        plays        cat4        subcat4  \n",
-       "998   indie rock        cat2        subcat8  \n",
-       "999  food trucks        cat1        subcat1  "
+       "    category_id subcategory_id  \n",
+       "999        cat1        subcat1  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "campaign_df.tail()"
+    "campaign_df.tail(1)"
    ]
   },
   {
